--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+.main-wrapper {
+    display: grid;
+    max-width: 1200px;
+    margin: 0 auto;
+    grid-template-columns: 100px 1fr;
+    grid-template-rows: 100px 1fr;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.mainNavbar {
+    border-bottom: black 1px solid;
+}
+.mainNavbar > div{
+    margin: 0 5px;
+}
+.mainNavbar > div > a {
+    text-decoration: none;
+    color: #1d1d1d;
+}
+.mainNavbar > div > a:hover{
+    text-decoration: underline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mainNavbar .active {
+    color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.mainContent {
+    border-top: black 1px solid;
+}
+.mainContent  > div {
+    margin: 0 15px;
+    padding: 10px;
+    border-left: black 1px solid;
+    border-right: black 1px solid;
 }
 
-.App-link {
-  color: #61dafb;
+.mainHeader {
+    display: grid;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.mainLogo {
+    border-left: black 1px solid;
+}
+
+.mainLogo img{
+    width: 100px;
+    height: 100px;
 }
